--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "debug": "cross-env ENV=prod PWDEBUG=1 DEBUG=pw:api cucumber-js --config=config/cucumber.js",
     "pretest": "npx ts-node src/helper/report/init.ts",
-    "test": "cross-env ENV=test FORCE_COLOR=0 cucumber-js --config=config/cucumber.js || (exit 0)",
+    "test": "cross-env ENV=test FORCE_COLOR=0 cucumber-js --config=config/cucumber.js || true",
     "posttest": "npx ts-node src/helper/report/report.ts",
     "test:failed": "cucumber-js -p rerun @rerun.txt"
   },
